repo-homework: fix biz logic.